5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3997/executions/1671_1105.log
== TEST (2019-04-24 18:41:04) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao == input("Digite um nome: ")
print("Entrada: " brasao)

if ( brasao == lobo):
	print("Casa: " "Stark")
elif ( brasao == leao):
	print( "Casa: " "Lannister")
-- ERROR:
File "XXXX", line 4
    print("Entrada: " brasao)
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 18:41:25) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao == input("Digite um nome: ")
print("Entrada:", brasao)

if ( brasao == lobo):
	print("Casa: " "Stark")
elif ( brasao == leao):
	print( "Casa: " "Lannister")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    brasao == input()
NameError: name 'brasao' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 18:41:35) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao = input("Digite um nome: ")
print("Entrada:", brasao)

if ( brasao == lobo):
	print("Casa: " "Stark")
elif ( brasao == leao):
	print( "Casa: " "Lannister")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if ( brasao == lobo):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 18:42:13) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao = input("Digite um nome: ")
print("Entrada:", brasao)

if ( brasao == "lobo"):
	print("Casa: " "Stark")
elif ( brasao == leao):
	print( "Casa: " "Lannister")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    elif ( brasao == leao):
NameError: name 'leao' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 18:50:32) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao = input("Digite um nome: ")
print("Entrada:", brasao)

if ( brasao == "lobo"):
	print("Casa: " "Stark")
elif ( brasao == "leao"):
	print( "Casa: " "Lannister")
elif( brasao == "veado"):
	print( "Casa: " "Baratheon")
elif( brasao == "dragao"):
	print("Casa: " "Targaryen")
elif( brasao == "rosa"):
	print("Casa: " "Tyrell")
elif( brasao == "sol"):
	print("Casa: " "Martell")
elif( brasao == "lula"):
	print("Casa: " "Greyjoy")
elif( brasao == "esfolado"):
	print("Casa: " "Bolton")
elif( brasao == "turta"):
	print("Casa: " "Tully")
else:
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 18:50:44) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao = input("Digite um nome: ")
print("Entrada:", brasao)

if ( brasao == "lobo"):
	print("Casa: " "Stark")
elif ( brasao == "leao"):
	print( "Casa: " "Lannister")
elif( brasao == "veado"):
	print( "Casa: " "Baratheon")
elif( brasao == "dragao"):
	print("Casa: " "Targaryen")
elif( brasao == "rosa"):
	print("Casa: " "Tyrell")
elif( brasao == "sol"):
	print("Casa: " "Martell")
elif( brasao == "lula"):
	print("Casa: " "Greyjoy")
elif( brasao == "esfolado"):
	print("Casa: " "Bolton")
elif( brasao == "turta"):
	print("Casa: " "Tully")
else:
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 18:50:49) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao = input("Digite um nome: ")
print("Entrada:", brasao)

if ( brasao == "lobo"):
	print("Casa: " "Stark")
elif ( brasao == "leao"):
	print( "Casa: " "Lannister")
elif( brasao == "veado"):
	print( "Casa: " "Baratheon")
elif( brasao == "dragao"):
	print("Casa: " "Targaryen")
elif( brasao == "rosa"):
	print("Casa: " "Tyrell")
elif( brasao == "sol"):
	print("Casa: " "Martell")
elif( brasao == "lula"):
	print("Casa: " "Greyjoy")
elif( brasao == "esfolado"):
	print("Casa: " "Bolton")
elif( brasao == "turta"):
	print("Casa: " "Tully")
else:
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 18:50:55) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao = input("Digite um nome: ")
print("Entrada:", brasao)

if ( brasao == "lobo"):
	print("Casa: " "Stark")
elif ( brasao == "leao"):
	print( "Casa: " "Lannister")
elif( brasao == "veado"):
	print( "Casa: " "Baratheon")
elif( brasao == "dragao"):
	print("Casa: " "Targaryen")
elif( brasao == "rosa"):
	print("Casa: " "Tyrell")
elif( brasao == "sol"):
	print("Casa: " "Martell")
elif( brasao == "lula"):
	print("Casa: " "Greyjoy")
elif( brasao == "esfolado"):
	print("Casa: " "Bolton")
elif( brasao == "turta"):
	print("Casa: " "Tully")
else:
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 18:51:05) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao = input("Digite um nome: ")
print("Entrada:", brasao)

if ( brasao == "lobo"):
	print("Casa: " "Stark")
elif ( brasao == "leao"):
	print( "Casa: " "Lannister")
elif( brasao == "veado"):
	print( "Casa: " "Baratheon")
elif( brasao == "dragao"):
	print("Casa: " "Targaryen")
elif( brasao == "rosa"):
	print("Casa: " "Tyrell")
elif( brasao == "sol"):
	print("Casa: " "Martell")
elif( brasao == "lula"):
	print("Casa: " "Greyjoy")
elif( brasao == "esfolado"):
	print("Casa: " "Bolton")
elif( brasao == "turta"):
	print("Casa: " "Tully")
else:
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 18:51:11) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao = input("Digite um nome: ")
print("Entrada:", brasao)

if ( brasao == "lobo"):
	print("Casa: " "Stark")
elif ( brasao == "leao"):
	print( "Casa: " "Lannister")
elif( brasao == "veado"):
	print( "Casa: " "Baratheon")
elif( brasao == "dragao"):
	print("Casa: " "Targaryen")
elif( brasao == "rosa"):
	print("Casa: " "Tyrell")
elif( brasao == "sol"):
	print("Casa: " "Martell")
elif( brasao == "lula"):
	print("Casa: " "Greyjoy")
elif( brasao == "esfolado"):
	print("Casa: " "Bolton")
elif( brasao == "turta"):
	print("Casa: " "Tully")
else:
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 18:51:14) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao = input("Digite um nome: ")
print("Entrada:", brasao)

if ( brasao == "lobo"):
	print("Casa: " "Stark")
elif ( brasao == "leao"):
	print( "Casa: " "Lannister")
elif( brasao == "veado"):
	print( "Casa: " "Baratheon")
elif( brasao == "dragao"):
	print("Casa: " "Targaryen")
elif( brasao == "rosa"):
	print("Casa: " "Tyrell")
elif( brasao == "sol"):
	print("Casa: " "Martell")
elif( brasao == "lula"):
	print("Casa: " "Greyjoy")
elif( brasao == "esfolado"):
	print("Casa: " "Bolton")
elif( brasao == "turta"):
	print("Casa: " "Tully")
else:
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 18:51:19) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao = input("Digite um nome: ")
print("Entrada:", brasao)

if ( brasao == "lobo"):
	print("Casa: " "Stark")
elif ( brasao == "leao"):
	print( "Casa: " "Lannister")
elif( brasao == "veado"):
	print( "Casa: " "Baratheon")
elif( brasao == "dragao"):
	print("Casa: " "Targaryen")
elif( brasao == "rosa"):
	print("Casa: " "Tyrell")
elif( brasao == "sol"):
	print("Casa: " "Martell")
elif( brasao == "lula"):
	print("Casa: " "Greyjoy")
elif( brasao == "esfolado"):
	print("Casa: " "Bolton")
elif( brasao == "turta"):
	print("Casa: " "Tully")
else:
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 18:51:24) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao = input("Digite um nome: ")
print("Entrada:", brasao)

if ( brasao == "lobo"):
	print("Casa: " "Stark")
elif ( brasao == "leao"):
	print( "Casa: " "Lannister")
elif( brasao == "veado"):
	print( "Casa: " "Baratheon")
elif( brasao == "dragao"):
	print("Casa: " "Targaryen")
elif( brasao == "rosa"):
	print("Casa: " "Tyrell")
elif( brasao == "sol"):
	print("Casa: " "Martell")
elif( brasao == "lula"):
	print("Casa: " "Greyjoy")
elif( brasao == "esfolado"):
	print("Casa: " "Bolton")
elif( brasao == "turta"):
	print("Casa: " "Tully")
else:
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 18:51:33) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao = input("Digite um nome: ")
print("Entrada:", brasao)

if ( brasao == "lobo"):
	print("Casa: " "Stark")
elif ( brasao == "leao"):
	print( "Casa: " "Lannister")
elif( brasao == "veado"):
	print( "Casa: " "Baratheon")
elif( brasao == "dragao"):
	print("Casa: " "Targaryen")
elif( brasao == "rosa"):
	print("Casa: " "Tyrell")
elif( brasao == "sol"):
	print("Casa: " "Martell")
elif( brasao == "lula"):
	print("Casa: " "Greyjoy")
elif( brasao == "esfolado"):
	print("Casa: " "Bolton")
elif( brasao == "turta"):
	print("Casa: " "Tully")
else:
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 18:51:36) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao = input("Digite um nome: ")
print("Entrada:", brasao)

if ( brasao == "lobo"):
	print("Casa: " "Stark")
elif ( brasao == "leao"):
	print( "Casa: " "Lannister")
elif( brasao == "veado"):
	print( "Casa: " "Baratheon")
elif( brasao == "dragao"):
	print("Casa: " "Targaryen")
elif( brasao == "rosa"):
	print("Casa: " "Tyrell")
elif( brasao == "sol"):
	print("Casa: " "Martell")
elif( brasao == "lula"):
	print("Casa: " "Greyjoy")
elif( brasao == "esfolado"):
	print("Casa: " "Bolton")
elif( brasao == "turta"):
	print("Casa: " "Tully")
else:
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 18:51:41) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao = input("Digite um nome: ")
print("Entrada:", brasao)

if ( brasao == "lobo"):
	print("Casa: " "Stark")
elif ( brasao == "leao"):
	print( "Casa: " "Lannister")
elif( brasao == "veado"):
	print( "Casa: " "Baratheon")
elif( brasao == "dragao"):
	print("Casa: " "Targaryen")
elif( brasao == "rosa"):
	print("Casa: " "Tyrell")
elif( brasao == "sol"):
	print("Casa: " "Martell")
elif( brasao == "lula"):
	print("Casa: " "Greyjoy")
elif( brasao == "esfolado"):
	print("Casa: " "Bolton")
elif( brasao == "turta"):
	print("Casa: " "Tully")
else:
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 18:51:46) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao = input("Digite um nome: ")
print("Entrada:", brasao)

if ( brasao == "lobo"):
	print("Casa: " "Stark")
elif ( brasao == "leao"):
	print( "Casa: " "Lannister")
elif( brasao == "veado"):
	print( "Casa: " "Baratheon")
elif( brasao == "dragao"):
	print("Casa: " "Targaryen")
elif( brasao == "rosa"):
	print("Casa: " "Tyrell")
elif( brasao == "sol"):
	print("Casa: " "Martell")
elif( brasao == "lula"):
	print("Casa: " "Greyjoy")
elif( brasao == "esfolado"):
	print("Casa: " "Bolton")
elif( brasao == "turta"):
	print("Casa: " "Tully")
else:
	print("Brasao invalido")
-- EXECUTION TIME:
0.144465
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
